--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+/* Navigation Bar */
+
 body {
     margin: 0;
 }
@@ -36,4 +38,59 @@ li {
 
 #hero-image{
     max-width: 100%;
+}
+
+/* About Us Section */
+
+
+#contentContainer {
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.itemContainer {
+    width: 100%;
+    display: flex;
+    padding: 5vh 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.itemRight, .itemLeft {
+    max-width: 47%;
+    max-height: 500px;
+    margin-right: auto;
+}
+
+#Who_Are_We {
+    color: #eaad00;
+    font-weight: bolder;
+    font-size: 1.2em;
+    margin-bottom: 0;
+}
+
+#About_Heading {
+    color: #00184c;
+    font-size: 2.5em;
+}
+
+p {
+    font-size: 20px;
+    color: rgb(61, 61, 61);
+    line-height: 1.5em;
+}
+
+#OurWorkBtn{
+    padding: 1em;
+    font-size: 16px;
+    color: white;
+    background-color: #eaad00;
+    border-radius: 36px;
+    border-color: white;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-top-width: 0;
+    margin-top: 2em;
 }
