--- a/assets/style.css
+++ b/assets/style.css
@@ -94,6 +94,12 @@ p {
     border-right-width: 0;
     border-bottom-width: 0;
     border-top-width: 0;
+    text-align: center;
+    float: left;
+}
+
+.itemLeft > div {
+    margin-top: 5%;
 }
 
 .imgLeft {
@@ -101,6 +107,14 @@ p {
     max-height: 800px;
     margin-right: auto;
     float: left;
+    border-radius: 5%;
+}
+
+.imgAboutUsRight{
+    max-width: 100%;
+    max-height: 800px;
+    margin-right: auto;
+    float: right;
     border-radius: 5%;
 }
 
@@ -127,6 +141,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 5%;
 }
 
 h3 {
@@ -152,4 +167,48 @@ h3 {
     text-align: center;
     color: #00184c;
     font-weight: bolder;
+}
+
+#reviewContainer {
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 5%;
+}
+
+#review {
+    width: 33%;
+    float: left;
+    color: rgb(209, 209, 209);
+}
+
+#star {
+    color: #ff9100;
+    width: 33%;
+    float: left;
+    margin-bottom: 0%;
+}
+
+#tick {
+    color: #ff9100;
+}
+
+.blueBackground {
+    background-color: rgb(0, 24, 77, 95%);
+    padding-bottom: 3%;
+    border-top: #ff9100 5px solid;
+    border-bottom: #ff9100 5px solid;
+}
+
+#serviceHeader03{
+    color: rgb(209, 209, 209);
+    font-size: 36px;
+    margin-top: 5%;
+    text-align: center;
+}
+
+#contentContainer02 {
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
 }
