--- a/assets/style.css
+++ b/assets/style.css
@@ -213,11 +213,18 @@ h3 {
     overflow: hidden;
 }
 
+#galleryContainer {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .galleryImage {
     max-width: 400px;
     max-height: 200px;
+    visibility: visible;
 }
 
-.box {
-    color: red;
+.photo {
+    display: inline;
 }
