--- a/assets/style.css
+++ b/assets/style.css
@@ -287,7 +287,7 @@ textarea[name="message"]
     font-family: 'Courier New', Courier, monospace;
 }
 
-.itemLeftForm {
+.itemRightForm {
     background-color: rgb(0, 24, 77, 40%);
     max-width: 47%;
     border-radius: 5%;
@@ -306,13 +306,14 @@ textarea[name="message"]
 }
 
 .imageBackground {
-    background:linear-gradient(0deg, rgba(0, 24, 77, 0.8), rgba(0, 24, 77, 0.8)), url("https://contemporary-coatings.co.uk/wp-content/uploads/2022/02/Paints.jpg");
+    background:linear-gradient(0deg, rgba(255, 145, 0, 85%), rgba(255, 145, 0, 85%));
 }
 
 #info {
     color: white;
     font-size: 24px;
     font-weight: bold;
+    margin-left: 15%;
 }
 
 .itemRightInfo {
@@ -328,4 +329,38 @@ a {
 a:hover {
     color: #f0860c;
     cursor: pointer;
+}
+
+#map {
+  height: 400px; /* The height is 400 pixels */
+  width: 25%; /* The width is the width of the web page */
+  float: right;
+  margin-right: 10%;
+  margin-bottom: 2%;
+  border: 3px solid #f0860c;
+}
+
+#footerLogo {
+    height: 30%;
+    width: 30%;
+    display: block;
+    margin-left: 10%;
+    margin-top: 2%;
+}
+
+.itemLeftFoot {
+
+}
+
+.itemRightFoot {
+    text-align: center;
+    max-width: 47%;
+}
+
+.itemContainerFooter {
+    width: 100%;
+    display: flex;
+    padding: 5vh 0;
+    align-items: center;
+    background:linear-gradient(0deg, rgba(0, 24, 77, 0.8), rgba(0, 24, 77, 0.8)), url("https://contemporary-coatings.co.uk/wp-content/uploads/2022/02/Paints.jpg");
 }
