--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,26 @@
 /* Navigation Bar */
 body {
     margin: 0;
+    overflow-x: hidden;
+}
+
+nav > ul > li > a {
+    text-decoration: none;
+    color:rgb(61, 61, 61);
+    font-size: 20px;
+}
+
+nav > ul > a:hover {
+    color:#ff9100;
+    transition: all .2s ease-in-out 0s;
+    transform: scaleX(1);
 }
 
 nav {
     text-decoration: none;
     text-align: right;
     padding-right: 20%;
-    padding: 1em 20% 1em 0em;
+    padding: 1.5em 20% 1.5em 0em;
 }
 
 li {
@@ -16,30 +29,132 @@ li {
     font-size: 18px;
 }
 
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: rgb(61, 61, 61);
+  }
+
+  .hover-underline-animation::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #00184c;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+
+  .hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+
 #logo {
     float: left;
     padding-left: 20%;
-    padding-top: 1em;
+    padding-top: 1.5em;
 }
 
 #quote {
-    padding: 1em;
-    font-size: 16px;
-    color: white;
-    background-color: #ff9100;
-    border-radius: 36px;
-    border-color: white;
-    border-left-width: 0;
-    border-right-width: 0;
-    border-bottom-width: 0;
-    border-top-width: 0;
+  appearance: button;
+  background-color: #d17600;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1em;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
 }
 
+#quote:after {
+  background-clip: padding-box;
+  background-color: #ff9100;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+#quote:main,
+#quote:focus {
+  user-select: auto;
+}
+
+#quote:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+#quote:disabled {
+  cursor: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #hero-image{
-    max-width: 100%;
+    max-width: 105vw;
+    max-height: 86vh;
+}
+
+#fullScreen {
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 /* About Us Section */
+
 
 
 #contentContainer {
@@ -333,11 +448,10 @@ a:hover {
 
 #map {
   height: 400px; /* The height is 400 pixels */
-  width: 25%; /* The width is the width of the web page */
-  float: right;
-  margin-right: 10%;
+  width: 50%; /* The width is the width of the web page */
   margin-bottom: 2%;
   border: 3px solid #f0860c;
+  margin-left: 35%;
 }
 
 #footerLogo {
@@ -349,12 +463,13 @@ a:hover {
 }
 
 .itemLeftFoot {
-
+    max-width: 50%;
+    border-radius: 5%;
 }
 
 .itemRightFoot {
-    text-align: center;
-    max-width: 47%;
+    width: 50%;
+    border-radius: 5%;
 }
 
 .itemContainerFooter {
@@ -363,4 +478,10 @@ a:hover {
     padding: 5vh 0;
     align-items: center;
     background:linear-gradient(0deg, rgba(0, 24, 77, 0.8), rgba(0, 24, 77, 0.8)), url("https://contemporary-coatings.co.uk/wp-content/uploads/2022/02/Paints.jpg");
+}
+
+#contentContainerFooter {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
 }
