--- a/assets/style.css
+++ b/assets/style.css
@@ -371,26 +371,46 @@ h3 {
     overflow: hidden;
 }
 
-#galleryContainer {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-}
+.btn {
+    margin-top: 12px;
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+  
+.btn:hover {
+    background-color: #ffb95e;
+  }
 
-.galleryImage {
-    visibility: visible;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+  .btn.active {
+    background-color: #ff9100;
+    color: white;
+  }
 
-.row {
-    display: flex;
+.row,
+.row > .column {
+    padding-top: 12px;
+    padding-right: 14px;
 }
 
 .column {
-    padding: 5px;
-}
+    float: left;
+    width: 31%;
+    display: none; /* Hide all elements by default */
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .show {
+    display: block;
+  }
     
 .submitbutton {
     height: 3em;
