--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 /* Navigation Bar */
 body {
     margin: 0;
@@ -35,6 +39,7 @@ nav > ul > li > a {
     -ms-transition: opacity 500ms linear;
     transition: opacity 500ms linear;
 }
+
 
 
 
@@ -234,7 +239,21 @@ p {
     letter-spacing: 0.2px;
 }
 
+::placeholder {
+    color: red;
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: red;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+   color: red;
+  }
+
 #OurWorkBtn{
+    text-decoration: none;
     appearance: button;
     background-color: #d17600;
     border: solid transparent;
@@ -570,24 +589,20 @@ a:hover {
     height: 20%;
     width: 20%;
     display: block;
-    margin-left: 10%;
-    margin-top: 2%;
-}
-
-.itemLeftFoot {
-    max-width: 50%;
-    border-radius: 5%;
+    float: left;
+    padding-top: 1%;
 }
 
 .itemRightFoot {
-    width: 50%;
-    border-radius: 5%;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-bottom: 1%;
 }
 
 .itemContainerFooter {
     width: 100%;
-    display: flex;
-    padding: 5vh 0;
+    padding: 2vh 0;
     align-items: center;
     background-color: rgb(0 0 0 / 45%);
 }
@@ -601,4 +616,10 @@ a:hover {
 
 .itemRightFoot > p{
     margin-left: 50%;
+    color: white;
+    line-height: 1em;
+}
+
+#paddedTop {
+    padding-top: 2.5%;
 }
